- Cleaned up some layout issues with the lines. - Hid the lines in mobile view for now. - Hide all elements under collapse sublist so there isn't extra space to the right of the collapsed card - Fixed lazy load sample. Lazy load was happening on any card that was clicked on.

--- a/components/hierarchy/_hierarchy.scss
+++ b/components/hierarchy/_hierarchy.scss
@@ -245,7 +245,7 @@ $hierarchy-line-width: 1px;
         content: '';
         display: inline-block;
         height: 25px;
-        width: 100%;
+        width: 105%;
       }
 
       //Draw Line Up and Left
